--- a/index.html
+++ b/index.html
@@ -1,132 +1,377 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Slider cu Fade-in</title>
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mese de Sticlă Premium</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* CSS simplu pentru slider și fade-in */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #f0f0f0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      font-family: 'Poppins', sans-serif;
+      background-color: #1e1e2f;
+      color: #f2f2f2;
+      line-height: 1.6;
     }
-    .slider {
-      position: relative;
-      width: 90%;
-      max-width: 600px;
-      height: 350px;
-      margin: 40px 0;
-      overflow: hidden;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      background: #fff;
-    }
-    .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      transition: opacity 0.6s ease-in-out;
-      background-size: cover;
-      background-position: center;
-    }
-    .slide.active {
-      opacity: 1;
-      position: relative;
-      z-index: 1;
-    }
-    .prev, .next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0,0,0,0.5);
-      color: white;
-      border: none;
-      padding: 12px 18px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 3px;
-      user-select: none;
-    }
-    .prev:hover, .next:hover {
-      background: rgba(0,0,0,0.8);
-    }
-    .prev {
-      left: 10px;
-    }
-    .next {
-      right: 10px;
-    }
-    /* Fade-in elements */
-    .fade-in {
-      opacity: 0;
-      margin: 20px 0;
-      font-size: 1.2rem;
-      color: #333;
-      max-width: 600px;
+
+    header {
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      padding: 60px 20px;
       text-align: center;
+      color: #ffffff;
+    }
+
+    header h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2em;
+      opacity: 0.8;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+
+    .product {
+      background: rgba(255, 255, 255, 0.03);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 16px;
+      margin-bottom: 40px;
+      overflow: hidden;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .product:hover {
+      transform: scale(1.01);
+    }
+
+    .product img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .details {
+      padding: 24px;
+    }
+
+    .details h2 {
+      font-size: 1.6em;
+      color: #00c9a7;
+      margin-bottom: 10px;
+    }
+
+    .details p {
+      color: #ccc;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 16px;
+      background-color: #00c9a7;
+      color: #fff;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #00b498;
+    }
+
+    .map {
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      margin-top: 60px;
+    }
+
+    footer {
+      background-color: #12121c;
+      color: #888;
+      text-align: center;
+      padding: 30px;
+      margin-top: 60px;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2em;
+      }
+
+      .details h2 {
+        font-size: 1.3em;
+      }
+
+      .btn {
+        font-size: 0.95em;
+      }
     }
   </style>
 </head>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 <body>
-  
-  <div class="slider">
-    <div class="slide active" style="background-image: url('https://picsum.photos/id/1018/600/350');"></div>
-    <div class="slide" style="background-image: url('https://picsum.photos/id/1015/600/350');"></div>
-    <div class="slide" style="background-image: url('https://picsum.photos/id/1019/600/350');"></div>
+  <div class="slider" onmouseover="pauseSlider()" onmouseout="resumeSlider()">
+  <img src="img/masa-sticla1.jpg" class="slide active" alt="Masa sticla 1">
+  <img src="img/masa-sticla2.jpg" class="slide" alt="Masa sticla 2">
+  <img src="img/masa-sticla3.jpg" class="slide" alt="Masa sticla 3">
+  <img src="img/masa-sticla4.jpg" class="slide" alt="Masa sticla 4">
+  <img src="img/masa-sticla5.jpg" class="slide" alt="Masa sticla 5">
+  <img src="img/masa-sticla6.jpg" class="slide" alt="Masa sticla 6">
+  <img src="img/masa-sticla7.jpg" class="slide" alt="Masa sticla 7">
+  <img src="img/masa-sticla8.jpg" class="slide" alt="Masa sticla 8">
+  <img src="img/masa-sticla9.jpg" class="slide" alt="Masa sticla 9">
+  <img src="img/masa-sticla10.jpg" class="slide" alt="Masa sticla 10">
+  <img src="img/masa-sticla11.jpg" class="slide" alt="Masa sticla 11">
+  <img src="img/masa-sticla12.jpg" class="slide" alt="Masa sticla 12">
+  <img src="img/masa-sticla13.jpg" class="slide" alt="Masa sticla 13">
+  <img src="img/masa-sticla14.jpg" class="slide" alt="Masa sticla 14">
+  <img src="img/masa-sticla15.jpg" class="slide" alt="Masa sticla 15">
+  <img src="img/masa-sticla16.jpg" class="slide" alt="Masa sticla 16">
+  <img src="img/masa-sticla17.jpg" class="slide" alt="Masa sticla 17">
+  <img src="img/masa-sticla18.jpg" class="slide" alt="Masa sticla 18">
+  <img src="img/masa-sticla19.jpg" class="slide" alt="Masa sticla 19">
+  <img src="img/masa-sticla20.jpg" class="slide" alt="Masa sticla 20">
+  <img src="img/masa-sticla21.jpg" class="slide" alt="Masa sticla 21">
+  <img src="img/masa-sticla22.jpg" class="slide" alt="Masa sticla 22">
+  <img src="img/masa-sticla23.jpg" class="slide" alt="Masa sticla 23">
+  <img src="img/masa-sticla24.jpg" class="slide" alt="Masa sticla 24">
+  <img src="img/masa-sticla25.jpg" class="slide" alt="Masa sticla 25">
+  <img src="img/masa-sticla26.jpg" class="slide" alt="Masa sticla 26">
+  <img src="img/masa-sticla27.jpg" class="slide" alt="Masa sticla 27">
+  <img src="img/masa-sticla28.jpg" class="slide" alt="Masa sticla 28">
 
-    <button class="prev" aria-label="Slide anterior">&#10094;</button>
-    <button class="next" aria-label="Slide următor">&#10095;</button>
+  <button class="prev" onclick="prevSlide()">&#10094;</button>
+  <button class="next" onclick="nextSlide()">&#10095;</button>
+</div>
+
+  <h2>Unde ne găsești?</h2>
+<div id="map" style="height: 400px; border-radius: 16px; margin-bottom: 40px;"></div>
+
+  
+
+
+<header>
+  <h1>Mese de Sticlă Premium</h1>
+  <p>Design modern pentru case elegante</p>
+</header>
+
+<div class="container">
+
+  <!-- PRODUS 1 -->
+<div class="product fade-in">
+  <div class="slider" onmouseover="pauseSlider()" onmouseout="resumeSlider()">
+    <img src="img/masa1.jpg" class="slide active" alt="Masa 1">
+    <img src="img/masa1_2.jpg" class="slide" alt="Masa 1 - poză secundară">
+    <img src="img/masa1_3.jpg" class="slide" alt="Masa 1 - poză 3">
+    <button class="prev" onclick="prevSlide()">&#10094;</button>
+    <button class="next" onclick="nextSlide()">&#10095;</button>
+  </div>
+  <div class="details">
+    <h2>Masa Elegantă din Sticlă</h2>
+    <p>Sticlă securizată, picior din metal premium, design modern 2026. Disponibilă la comandă.</p>
+    <a class="btn" href="https://wa.me/40745814800?text=Salut!%20Vreau%20mai%20multe%20detalii%20despre%20masa%20eleganta%20din%20sticla.">Comandă pe WhatsApp</a>
+  </div>
+</div>
+
+
+  <!-- PRODUS 2 -->
+  <div class="product">
+    <img src="https://via.placeholder.com/1200x600?text=Masa+Sticla+2" alt="Masa 2">
+    <div class="details">
+      <h2>Masa Neagră Elegantă</h2>
+      <p>Dimensiuni: 140x70cm<br>Sticlă fumurie cu margini rotunjite<br>Preț: 1700 RON</p>
+      <a class="btn" href="https://wa.me/40745814800?text=Salut!%20Sunt%20interesat%20de%20masa%20minimalista.%20Aș%20vrea%20mai%20multe%20detalii.">Comandă pe WhatsApp</a>
+    </div>
   </div>
 
-  <p class="fade-in">Acesta este un exemplu de text care apare cu efect fade-in.</p>
-  <p class="fade-in">Poți pune aici orice conținut dorești să apară elegant.</p>
+</div>
 
+<footer>
+  &copy; 2025 Mese de Sticlă Premium - Toate drepturile rezervate
+</footer>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Slider
-      const slides = document.querySelectorAll('.slide');
-      const prevBtn = document.querySelector('.prev');
-      const nextBtn = document.querySelector('.next');
-      let currentIndex = 0;
+  document.addEventListener("DOMContentLoaded", () => {
+    const cards = document.querySelectorAll(".product");
+    cards.forEach((card, index) => {
+      setTimeout(() => {
+        card.classList.add("fade-in");
+      }, 200 * index);
+    });
+  });
+</script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sliders = document.querySelectorAll('.slider');
+
+    sliders.forEach((slider) => {
+      let slides = slider.querySelectorAll('.slide');
+      let currentSlide = 0;
+      let interval;
 
       function showSlide(index) {
         slides.forEach((slide, i) => {
-          slide.classList.toggle('active', i === index);
+          slide.classList.remove('active');
+          if (i === index) slide.classList.add('active');
         });
       }
 
-      function showNext() {
-        currentIndex = (currentIndex + 1) % slides.length;
-        showSlide(currentIndex);
+      function nextSlide() {
+        currentSlide = (currentSlide + 1) % slides.length;
+        showSlide(currentSlide);
       }
 
-      function showPrev() {
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        showSlide(currentIndex);
+      function prevSlide() {
+        currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+        showSlide(currentSlide);
       }
 
-      prevBtn.addEventListener('click', showPrev);
-      nextBtn.addEventListener('click', showNext);
+      slider.querySelector('.next').addEventListener('click', () => {
+        pauseSlider();
+        nextSlide();
+        resumeSlider();
+      });
+
+      slider.querySelector('.prev').addEventListener('click', () => {
+        pauseSlider();
+        prevSlide();
+        resumeSlider();
+      });
+
+      function pauseSlider() {
+        clearInterval(interval);
+      }
+
+      function resumeSlider() {
+        interval = setInterval(nextSlide, 4000);
+      }
+
+      slider.addEventListener('mouseover', pauseSlider);
+      slider.addEventListener('mouseout', resumeSlider);
 
       // Initialize slider
-      showSlide(currentIndex);
-
-      // Fade-in effect for elements with class 'fade-in'
-      const fadeElements = document.querySelectorAll('.fade-in');
-      fadeElements.forEach(el => {
-        el.style.opacity = 0;
-        setTimeout(() => {
-          el.style.transition = 'opacity 0.8s ease-in-out';
-          el.style.opacity = 1;
-        }, 100);
-      });
+      showSlide(currentSlide);
+      resumeSlider();
     });
-  </script>
+  });
+</script>
+
+  <script>
+  const map = L.map('map').setView([45.7489, 21.2087], 13); // coordonate Craiova (exemplu)
+
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+  }).addTo(map);
+
+  const marker = L.marker([45.7489, 21.2087]).addTo(map);
+  marker.bindPopup("<b>Mese Sticlă Craiova</b><br>Atelier & Showroom").openPopup();
+</script>
+
+  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+<script>
+  let slideIndex = 0;
+  let slides = document.querySelectorAll(".slide");
+
+  function showSlide(index) {
+    slides.forEach(slide => slide.classList.remove("active"));
+    slides[index].classList.add("active");
+  }
+
+  function nextSlide() {
+    slideIndex = (slideIndex + 1) % slides.length;
+    showSlide(slideIndex);
+  }
+
+  function prevSlide() {
+    slideIndex = (slideIndex - 1 + slides.length) % slides.length;
+    showSlide(slideIndex);
+  }
+
+  let interval = setInterval(nextSlide, 3000);
+
+  function pauseSlider() {
+    clearInterval(interval);
+  }
+
+  function resumeSlider() {
+    interval = setInterval(nextSlide, 3000);
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    showSlide(slideIndex);
+  });
+</script>
+
 </body>
 </html>
+
+<div id="galerie" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4"></div>
+<style>
+.slider {
+  position: relative;
+  max-width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.slide {
+  display: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide.active {
+  display: block;
+}
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0,0,0,0.5);
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  z-index: 1;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+</style>
