--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
   <!-- PRODUS 1 -->
 <div class="product fade-in">
   <div class="slider" onmouseover="pauseSlider()" onmouseout="resumeSlider()">
-    <img src="img/masa1.jpg" class="slide active" alt="Masa 1">
-    <img src="img/masa1_2.jpg" class="slide" alt="Masa 1 - poză secundară">
-    <img src="img/masa1_3.jpg" class="slide" alt="Masa 1 - poză 3">
+    <img src="https://i.postimg.cc/mk5Jr01k/masa-sticla1-jpg.jpg" alt="Poza 1" class="active" />
+    <img src="https://i.postimg.cc/MKfrD3j0/masa-sticla10-jpg.jpg" alt="Poza 2" />
+    <img src="https://i.postimg.cc/pdC0Tggv/masa-sticla11-jpg.jpg" alt="Poza 3" />
     <button class="prev" onclick="prevSlide()">&#10094;</button>
     <button class="next" onclick="nextSlide()">&#10095;</button>
   </div>
@@ -170,7 +170,13 @@
     <div class="details">
       <h2>Masa Neagră Elegantă</h2>
       <p>Dimensiuni: 140x70cm<br>Sticlă fumurie cu margini rotunjite<br>Preț: 1700 RON</p>
-      <a class="btn" href="https://wa.me/40745814800?text=Salut!%20Sunt%20interesat%20de%20masa%20minimalista.%20Aș%20vrea%20mai%20multe%20detalii.">Comandă pe WhatsApp</a>
+      <p>et Masa Extensibilă 3D cu Blat De Sticla Securizată +6 Scaune cu piele eco.
+📌📌  Lungime Extinsă 170 cm
+📌📌  Lungime stransa 130 cm 
+📌📌  Lățime 80cm
+📌📌  Înălțime 76cm
+📌📌  Schelet metalic.                                           ✴Plata se face la primirea coletului după VERIFICARE. 
+
     </div>
   </div>
 
