--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
       opacity: 0.8;
     }
 
-    .container {
-      max-width: 1200px;
-      margin: auto;
+    .container 
+    {
+      max-width: 400px;
+      margin: 20px auto;
+      position: relative;
+      text-align: center;;
       padding: 40px 20px;
     }
 
@@ -52,10 +55,10 @@
       background: rgba(255, 255, 255, 0.03);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 16px;
+      border-radius: 10px;
       margin-bottom: 40px;
       overflow: hidden;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      box-shadow: 0 0px 10px rgba(0,0,0,0.2);
       transition: transform 0.3s ease;
     }
 
@@ -130,6 +133,7 @@
       }
     }
   </style>
+  
 </head>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 <body>
