--- a/index.html
+++ b/index.html
@@ -154,61 +154,31 @@
   <!-- PRODUS 1 -->
 <div class="product fade-in">
  <div class="whatsapp-slider">
-  <img src="https://i.postimg.cc/mk5Jr01k/masa-sticla1-jpg.jpg" alt="Poza 1" class="active" />
-   
-  <img src="https://i.postimg.cc/MKfrD3j0/masa-sticla10-jpg.jpg" alt="Poza 2" />
-   
-  <img src="https://i.postimg.cc/pdC0Tggv/masa-sticla11-jpg.jpg" alt="Poza 3" />
-   
-  <img src="https://i.postimg.cc/6psb1Vdk/masa-sticla12-jpg.jpg" alt="Poza 4" />
-   
-  <img src="https://i.postimg.cc/13p7xgBf/masa-sticla13-jpg.jpg" alt="Poza 5" />
-   
-  <img src="https://i.postimg.cc/xCFtGLfF/masa-sticla14-jpg.jpg" alt="Poza 6" />
-   
-  <img src="https://i.postimg.cc/Y0G8djj2/masa-sticla15-jpg.jpg" alt="Poza 7" />
-   
-  <img src="https://i.postimg.cc/d105T5Yy/masa-sticla16-jpg.jpg" alt="Poza 8" />
-   
-  <img src="https://i.postimg.cc/kG0sz9tQ/masa-sticla17-jpg.jpg" alt="Poza 9" />
-   
-  <img src="https://i.postimg.cc/NGKw34HF/masa-sticla18-jpg.jpg" alt="Poza 10" />
-   
-  <img src="https://i.postimg.cc/KcCyxMPN/masa-sticla19-jpg.jpg" alt="Poza 11" />
-   
-  <img src="https://i.postimg.cc/gJcTHYvr/masa-sticla2-jpg.jpg" alt="Poza 12" />
-   
-  <img src="https://i.postimg.cc/rFW2mwgL/masa-sticla20-jpg.jpg" alt="Poza 13" />
-   
-  <img src="https://i.postimg.cc/P5QGWVB3/masa-sticla21-jpg.jpg" alt="Poza 14" />
-   
-  <img src="https://i.postimg.cc/nhJbQfw9/masa-sticla22-jpg.jpg" alt="Poza 15" />
-   
-  <img src="https://i.postimg.cc/MG9h4MZ1/masa-sticla23-jpg.jpg" alt="Poza 16" />
-   
-  <img src="https://i.postimg.cc/pTygtWy4/masa-sticla24-jpg.jpg" alt="Poza 17" />
-   
-  <img src="https://i.postimg.cc/HnyRV6wt/masa-sticla25-jpg.jpg" alt="Poza 18" />
-   
-  <img src="https://i.postimg.cc/Pxc0Xgwx/masa-sticla26-jpg.jpg" alt="Poza 19" />
-   
-  <img src="https://i.postimg.cc/05ThLqvX/masa-sticla27-jpg.jpg" alt="Poza 20" />
-   
-  <img src="https://i.postimg.cc/Wb0xVfbN/masa-sticla28-jpg.jpg" alt="Poza 21" />
-   
-  <img src="https://i.postimg.cc/nh7gHSFV/masa-sticla3-jpg.jpg" alt="Poza 22" />
-   
-  <img src="https://i.postimg.cc/hG1YmJQH/masa-sticla4-jpg.jpg" alt="Poza 23" />
-   
-  <img src="https://i.postimg.cc/k5mZDNGQ/masa-sticla5-jpg.jpg" alt="Poza 24" />
-   
-  <img src="https://i.postimg.cc/HnRvmXF7/masa-sticla6-jpg.jpg" alt="Poza 25" />
-   
-  <img src="https://i.postimg.cc/sxvHbwHr/masa-sticla7-jpg.jpg" alt="Poza 26" />
-   
-  <img src="https://i.postimg.cc/G2MSMZQK/masa-sticla8-jpg.jpg" alt="Poza 27" />
-   
-  <img src="https://i.postimg.cc/8k00LgsP/masa-sticla9-jpg.jpg" alt="Poza 28" />
+  <img src="https://i.postimg.cc/mk5Jr01k/masa-sticla1-jpg.jpg" alt="Poza 1" class="active" /> 
+  <img src="https://i.postimg.cc/pdC0Tggv/masa-sticla11-jpg.jpg">
+  <img src="https://i.postimg.cc/xCFtGLfF/masa-sticla14-jpg.jpg">
+  <img src="https://i.postimg.cc/Y0G8djj2/masa-sticla15-jpg.jpg">
+  <img src="https://i.postimg.cc/d105T5Yy/masa-sticla16-jpg.jpg">
+  <img src="https://i.postimg.cc/kG0sz9tQ/masa-sticla17-jpg.jpg">
+  <img src="https://i.postimg.cc/NGKw34HF/masa-sticla18-jpg.jpg">
+  <img src="https://i.postimg.cc/KcCyxMPN/masa-sticla19-jpg.jpg">
+  <img src="https://i.postimg.cc/gJcTHYvr/masa-sticla2-jpg.jpg">
+  <img src="https://i.postimg.cc/rFW2mwgL/masa-sticla20-jpg.jpg">
+  <img src="https://i.postimg.cc/P5QGWVB3/masa-sticla21-jpg.jpg">
+  <img src="https://i.postimg.cc/MG9h4MZ1/masa-sticla23-jpg.jpg">
+  <img src="https://i.postimg.cc/pTygtWy4/masa-sticla24-jpg.jpg">
+  <img src="https://i.postimg.cc/HnyRV6wt/masa-sticla25-jpg.jpg">
+  <img src="https://i.postimg.cc/Pxc0Xgwx/masa-sticla26-jpg.jpg">
+  <img src="https://i.postimg.cc/05ThLqvX/masa-sticla27-jpg.jpg">
+  <img src="https://i.postimg.cc/Wb0xVfbN/masa-sticla28-jpg.jpg">
+  <img src="https://i.postimg.cc/nh7gHSFV/masa-sticla3-jpg.jpg">
+  <img src="https://i.postimg.cc/hG1YmJQH/masa-sticla4-jpg.jpg">
+  <img src="https://i.postimg.cc/HnRvmXF7/masa-sticla6-jpg.jpg">
+  <img src="https://i.postimg.cc/sxvHbwHr/masa-sticla7-jpg.jpg">
+  <img src="https://i.postimg.cc/G2MSMZQK/masa-sticla8-jpg.jpg">
+  <img src="https://i.postimg.cc/8k00LgsP/masa-sticla9-jpg.jpg">
+  <img src="https://i.postimg.cc/g04qZkZJ/IMG-20250607-WA0003.jpg">
+  <img src="https://i.postimg.cc/DZMrxj53/Whats-App-Image-2025-06-07-at-01-13-01-20afd119.jpg">
 </div>
   <div class="details">
     <h2>Masa Elegantă din Sticlă</h2>
